--- a/front_end/src/i18n/locales/fr.json
+++ b/front_end/src/i18n/locales/fr.json
@@ -50,6 +50,10 @@
       "title": "Service après vente",
       "description": "Plus de soucis sur la sécurité"
     },
+    "service5": {
+      "title": "Une équipe d'artisans",
+      "description": "Des artisans qualifiés avec des années d'expérience"
+    },
     "bottomText": "Découvrez notre collection de carreaux artisanaux",
     "ctaButton": "Voir Nos Produits"
   },
@@ -68,17 +72,21 @@
     "form": {
       "title": "Envoyez-nous un message",
       "fullName": "Nom complet",
-      "email": "Email",
+        "address": " Adresse",
       "phone": "Téléphone",
       "subject": "Sujet",
       "message": "Message",
       "required": "*",
+              "city": "Ville",
+
       "placeholders": {
         "name": "Votre nom",
         "email": "votre@email.com",
         "phone": "+212 XXX XX XX XX",
         "subject": "Choisissez un sujet",
-        "message": "Décrivez votre demande en détail..."
+        "message": "Décrivez votre demande en détail...",
+        "address": "Votre adresse",
+        "city": "Votre ville"
       },
       "subjects": {
         "quote": "Demande de devis",
@@ -96,19 +104,31 @@
       "title": "Nos Coordonnées",
       "phone": {
         "title": "Téléphone",
-        "numbers": ["+212 5XX XX XX XX", "+212 6XX XX XX XX"]
+        "numbers": [
+          "+212 5XX XX XX XX",
+          "+212 6XX XX XX XX"
+        ]
       },
       "email": {
         "title": "Email",
-        "addresses": ["contact@votreentreprise.ma", "info@votreentreprise.ma"]
+        "addresses": [
+          "contact@votreentreprise.ma",
+          "info@votreentreprise.ma"
+        ]
       },
       "address": {
         "title": "Adresse",
-        "lines": ["Fès, Maroc", "Quartier des Artisans"]
+        "lines": [
+          "Fès, Maroc",
+          "Quartier des Artisans"
+        ]
       },
       "hours": {
         "title": "Horaires",
-        "times": ["Lun - Ven: 9h00 - 18h00", "Sam: 9h00 - 13h00"]
+        "times": [
+          "Lun - Ven: 9h00 - 18h00",
+          "Sam: 9h00 - 13h00"
+        ]
       }
     },
     "social": {
@@ -142,5 +162,26 @@
     "stayUpdated": "Restez informé",
     "enterEmail": "Entrez votre email",
     "copyright": "© {{year}} Zelij Capital. Tous droits réservés."
+  },
+  "collections": {
+    "title": "Notre Collection",
+    "text": "Découvrez des produits soigneusement sélectionnés, conçus avec une attention particulière aux détails et un savoir-faire de qualité.",
+    "add": "Ajouter",
+    "inStock": "en stock",
+    "outOfStock": "En rupture de stock",
+    "quickAdd": "Ajout rapide",
+    "Color": "Couleur"
+  },
+  "sheet": {
+    "shoppingCart": "Panier",
+    "items": "articles",
+    "Size": "Taille",
+    "Subtotal": "Sous-total",
+    "Total": "Total",
+    "Checkout": "Paiement",
+    "buttonOne": "Continuer vos achats",
+    "startShopping": "Commencez vos achats pour ajouter des articles à votre panier",
+    "emptyCart": "Votre panier est vide",
+    "currency": "MAD"
   }
 }
