--- a/front_end/src/i18n/locales/ar.json
+++ b/front_end/src/i18n/locales/ar.json
@@ -3,7 +3,8 @@
     "home": "الرئيسية",
     "collections": "المنتوجات",
     "contact": "اتصل بنا",
-    "cart": "عربة التسوق"
+    "cart": "عربة التسوق",
+    "Services": "خدماتنا"
   },
   "home": {
     "welcome": "مرحباً بكم في زليج",
@@ -71,6 +72,7 @@
     },
     "form": {
       "title": "أرسل لنا رسالة",
+      "title2":"معلومات العميل",
       "fullName": "الاسم الكامل",
       "email": "البريد الإلكتروني",
       "phone": "الهاتف",
@@ -79,6 +81,7 @@
       "address": "عنوان",
       "city": "مدينة",
       "required": "*",
+      "description": "الوصف",
       "placeholders": {
         "name": "اسمك",
         "email": "بريدك@الإلكتروني.com",
@@ -86,7 +89,8 @@
         "subject": "اختر موضوعاً",
         "message": "صف طلبك بالتفصيل...",
         "address": "عنوانك",
-        "city": "مدينتك"
+        "city": "مدينتك",
+        "description": "يرجى وصف ما تحتاجه..."
       },
       "subjects": {
         "quote": "طلب تسعير",
@@ -105,22 +109,19 @@
       "phone": {
         "title": "الهاتف",
         "numbers": [
-          "+212 5XX XX XX XX",
-          "+212 6XX XX XX XX"
+          "+212 6 0900-6229"
         ]
       },
       "email": {
         "title": "البريد الإلكتروني",
         "addresses": [
-          "contact@yourcompany.ma",
-          "info@yourcompany.ma"
+          "zellij.capital@gmail.com"
         ]
       },
       "address": {
         "title": "العنوان",
         "lines": [
-          "فاس، المغرب",
-          "حي الحرفيين"
+          "فاس، المغرب"
         ]
       },
       "hours": {
@@ -141,7 +142,8 @@
     "whatsapp": {
       "title": "اتصال سريع",
       "description": "تحتاج إلى رد فوري؟ تواصل معنا على واتساب!",
-      "button": "واتساب"
+      "button": "واتساب",
+      "message":"مرحباً، أنا مهتم بخدماتكم. هل يمكنكم إعطائي المزيد من التفاصيل؟"
     }
   },
   "footer": {
@@ -177,11 +179,62 @@
     "items": "العناصر",
     "Size": "الحجم",
     "Subtotal": "المجموع الفرعي",
-    "Total": "الإجمالي",
+    "Total": "المجموع",
     "Checkout": "الدفع",
     "buttonOne": "متابعة التسوق",
     "startShopping": "ابدأ التسوق لإضافة عناصر إلى عربة التسوق الخاصة بك",
     "emptyCart": "عربة التسوق فارغة",
-    "currency": "درهم "
+    "currency": "درهم ",
+    "total":"المجموع",
+    "advantage1": "الدفع عند الاستلام متاح",
+    "advantage2": "خدمة ما بعد البيع موثوقة",
+    "OrderSummary":"ملخص الطلب"
+  },
+  "service": {
+    "title1": "إتقان الإبداع في",
+    "title2": "التصميم المغربي",
+    "text": "اكتشف مجموعتنا من الحرف المغربية التقليدية وحلول التصميم الحديثة، حيث يلتقي التراث بالابتكار.",
+    "titleCard": "لم تجد الخدمة التي تحتاجها؟",
+    "textCard": "لا تقلق! يمكنك طلب خدمة مخصصة حسب احتياجاتك. اضغط على الزر أدناه للتواصل معنا وسنقوم بتنفيذها لك",
+    "call": "اتصل بنا",
+    "email": "راسلنا عبر البريد",
+    "visit": "العنوان",
+    "schedule": "طلب خدمة مخصصة",
+    "address": "فاس، المغرب",
+    "price": "نطاق السعر لكل متر مربع",
+    "cardButton": "الحصول على عرض سعر",
+    "checkOutTitle":"حجز خدمة",
+    "backButton":"العودة إلى الخدمات",
+    "panierName": "تفاصيل الخدمة",
+    "sendButton":"إرسال"
+
+  },
+  "ourStory": {
+    "title": "قصتنا",
+    "ownerName":"محمد بوراشد",
+    "mainText": "محمد بوراشد، حرفي مغربي ماهر، اكتشف شغفه بالزليج البلدي التقليدي في سن مبكرة، وتعلم من عائلته في فاس. على مر السنين، تحول إخلاصه وحبه لهذه الحرفة إلى احترافية حقيقية. عمل محمد وفريقه على العديد من المشاريع مع العملاء في مختلف المدن، وهم يحملون دائماً جمال وتراث الزليج المغربي إلى الحياة. متجذر في فاس، مسقط رأسه، مهمة محمد هي مشاركة فن وأناقة الزليج البلدي مع العالم.",
+    "artisanTitle": " حرفي الزليج",
+    "location": {
+      "title": "تراث فاس",
+      "description": "متجذر في مدينة فاس التاريخية، المغرب"
+    },
+    "team": {
+      "title": "فريق خبراء",
+      "description": "حرفيون ماهرون يحافظون على الحرفية التقليدية"
+    },
+    "expertise": {
+      "title": "التميز المهني",
+      "description": "سنوات من التفاني في إتقان الزليج البلدي"
+    },
+    "mission": {
+      "title": "المهمة العالمية",
+      "description": "مشاركة الفن والأناقة المغربية مع العالم"
+    },
+    "stats": {
+      "experience": "سنوات الخبرة",
+      "projects": "المشاريع المنجزة",
+      "clients": "العملاء السعداء",
+      "passion": "شغف لا نهائي"
+    }
   }
 }
