last update befor hosting

--- a/front_end/src/i18n/locales/ar.json
+++ b/front_end/src/i18n/locales/ar.json
@@ -55,7 +55,7 @@
       "title": "فريق من الحرفيين",
       "description": " حرفيون مهرة مع سنوات من الخبرة"
     },
-    "bottomText": "اكتشف مجموعتنا من البلاط الحرفي",
+    "bottomText": "اكتشف مجموعتنا من  الزليج التقليدي المغربي ",
     "ctaButton": "عرض منتجاتنا"
   },
   "section": {
@@ -72,7 +72,7 @@
     },
     "form": {
       "title": "أرسل لنا رسالة",
-      "title2":"معلومات العميل",
+      "title2": "معلومات العميل",
       "fullName": "الاسم الكامل",
       "email": "البريد الإلكتروني",
       "phone": "الهاتف",
@@ -82,6 +82,14 @@
       "city": "مدينة",
       "required": "*",
       "description": "الوصف",
+      "hideOrder": "إخفاء الطلب",
+      "showOrder": "عرض الطلب",
+      "color": "اللون",
+      "size": "الحجم",
+      "quantity": "الكمية",
+      "free": "مجاني",
+      "Checkout": "إتمام الشراء",
+      "BackToCollection": "العودة إلى المجموعة",
       "placeholders": {
         "name": "اسمك",
         "email": "بريدك@الإلكتروني.com",
@@ -101,7 +109,8 @@
       },
       "submitButton": {
         "idle": "إرسال الرسالة",
-        "loading": "جارٍ الإرسال..."
+        "loading": "جارٍ الإرسال...",
+        "placeOrder": "تأكيد الطلب"
       }
     },
     "contactInfo": {
@@ -143,9 +152,11 @@
       "title": "اتصال سريع",
       "description": "تحتاج إلى رد فوري؟ تواصل معنا على واتساب!",
       "button": "واتساب",
-      "message":"مرحباً، أنا مهتم بخدماتكم. هل يمكنكم إعطائي المزيد من التفاصيل؟"
+      "message": "مرحباً، أنا مهتم بخدماتكم. هل يمكنكم إعطائي المزيد من التفاصيل؟"
     }
   },
+  "productSuccess": "تم إنشاء الطلب بنجاح",
+  "productFailed": "لم يتم اختيار أي منتج",
   "footer": {
     "about": "عن الشركة",
     "contact": "اتصل بنا",
@@ -185,10 +196,10 @@
     "startShopping": "ابدأ التسوق لإضافة عناصر إلى عربة التسوق الخاصة بك",
     "emptyCart": "عربة التسوق فارغة",
     "currency": "درهم ",
-    "total":"المجموع",
+    "total": "المجموع",
     "advantage1": "الدفع عند الاستلام متاح",
     "advantage2": "خدمة ما بعد البيع موثوقة",
-    "OrderSummary":"ملخص الطلب"
+    "OrderSummary": "ملخص الطلب"
   },
   "service": {
     "title1": "إتقان الإبداع في",
@@ -203,15 +214,15 @@
     "address": "فاس، المغرب",
     "price": "نطاق السعر لكل متر مربع",
     "cardButton": "الحصول على عرض سعر",
-    "checkOutTitle":"حجز خدمة",
-    "backButton":"العودة إلى الخدمات",
+    "checkOutTitle": "حجز خدمة",
+    "backButton": "العودة إلى الخدمات",
     "panierName": "تفاصيل الخدمة",
-    "sendButton":"إرسال"
-
+    "sendButton": "إرسال",
+    "getQuote": "الحصول على عرض سعر"
   },
   "ourStory": {
     "title": "قصتنا",
-    "ownerName":"محمد بوراشد",
+    "ownerName": "محمد بوراشد",
     "mainText": "محمد بوراشد، حرفي مغربي ماهر، اكتشف شغفه بالزليج البلدي التقليدي في سن مبكرة، وتعلم من عائلته في فاس. على مر السنين، تحول إخلاصه وحبه لهذه الحرفة إلى احترافية حقيقية. عمل محمد وفريقه على العديد من المشاريع مع العملاء في مختلف المدن، وهم يحملون دائماً جمال وتراث الزليج المغربي إلى الحياة. متجذر في فاس، مسقط رأسه، مهمة محمد هي مشاركة فن وأناقة الزليج البلدي مع العالم.",
     "artisanTitle": " حرفي الزليج",
     "location": {
