--- a/front_end/src/i18n/locales/fr.json
+++ b/front_end/src/i18n/locales/fr.json
@@ -81,6 +81,14 @@
       "required": "*",
       "city": "Ville",
       "description": "Description",
+      "hideOrder": "Masquer la commande",
+      "showOrder": "Afficher la commande",
+       "color":"Couleur",
+      "size":"Taille",
+      "quantity":"Quantité",
+      "free":"Gratuit",
+      "Checkout":"Paiement",
+      "BackToCollection": "Retour à la collection",
       "placeholders": {
         "name": "Votre nom",
         "email": "votre@email.com",
@@ -100,7 +108,9 @@
       },
       "submitButton": {
         "idle": "Envoyer le message",
-        "loading": "Envoi en cours..."
+        "loading": "Envoi en cours...",
+        "placeOrder": "Passer la commande"
+
       }
     },
     "contactInfo": {
@@ -145,6 +155,8 @@
       "message":"Bonjour, je suis intéressé par vos services. Pouvez-vous me donner plus de détails ?"
     }
   },
+  "productSuccess":"Commande créée avec succès",
+  "productFailed":"Aucun produit sélectionné",
   "footer": {
     "about": "À propos",
     "contact": "Contact",
@@ -205,7 +217,9 @@
     "checkOutTitle":"Réserver un service",
     "backButton":"Retour aux services",
     "panierName":"Détails du service",
-    "sendButton":"Envoyer"
+    "sendButton":"Envoyer",
+    "getQuote": "Obtenir un devis"
+
   },
   "ourStory": {
     "title": "Notre Histoire",
